--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,8 +18,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ danielalvestad }}
-          password: ${{ dckr_pat_fUGoqplT-oo_8HL8Bt_cq42JPd4 }}
+          username: "danielalvestad"
+          password: "dckr_pat_fUGoqplT-oo_8HL8Bt_cq42JPd4"
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -30,4 +30,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ danielalvestad }}/clockbox:latest
+          tags: "danielalvestad/mysite-dani"
